# Lmdbug

./: .gitignore  README.md  USAGE_GUIDE.md  main.py  pyproject.toml  requirements.txt  setup.py
config_examples/: README.md  __init__.py  custom_processors.py  example_field_config.json  simple_processors.py
examples/: README.md  create_sample_db.py  create_simple_db.py  sample_proto.proto  sample_proto_pb2.py  simple_message.proto
lmdbug/: __init__.py  main.py
lmdbug/core/: __init__.py  config.py  data_service.py  exceptions.py  lmdb_reader.py  logging.py  preview_service.py  processor_registry.py  protobuf_handler.py
lmdbug/ui/: __init__.py  gradio_interface.py
src/lmdbug/: __init__.py  main.py
src/lmdbug/core/: lmdb_reader.py  preview_service.py  protobuf_handler.py
src/lmdbug/ui/: gradio_interface.py
