[project]
name = "lmdbug"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradio>=5.44.1",
    "lmdb>=1.7.3",
    "loguru>=0.7.3",
    "protobuf>=6.32.0",
    "soundfile>=0.13.1",
    "typer>=0.17.3",
]

[project.scripts]
lmdbug = "lmdbug.main:cli"